html aparece combito :)

--- a/src/app/components/add-modalidad/add-modalidad.component.html
+++ b/src/app/components/add-modalidad/add-modalidad.component.html
@@ -49,7 +49,7 @@
                 <label for="deporte">Deporte</label>
                 <select  id="deporte" name="deporte" class="form-control" >
                     <option value="-1"> [Seleccione] </option>   
-                   
+                    <option *ngFor="let x of lstDeporte" value="{{ x.idDeporte }}"> {{ x.nombre}}</option>
                 </select>
             </div>
         </div>
